flex-wrap for game to prevent overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,6 +66,11 @@ canvas {
   display: block;
 }
 
+main {
+  width: 720px;
+  height: 480px;
+}
+
 /* Smartphones ---------------------- */
 
 @media only screen and (max-width: 1024px) {
@@ -76,18 +81,21 @@ canvas {
 
 
 @media only screen and (max-width: 720px) {
-  canvas {
+  canvas,
+  main {
     width: 100%  !important;
   }
 }
 
 
 @media only screen and (max-height: 480px) {
-  canvas {
+  canvas,
+  main {
     height: 100dvh  !important;
+    border-radius: 0px;
   }
 
-  .game, .controls, .about, .game__lost, .game__won {
+  .main {
     width: 100vw !important;
     height: 100dvh !important;
   }
@@ -127,14 +135,16 @@ h1 {
 .game {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   background-image: url('../assets/img/9_intro_outro_screens/start/startscreen_2.png');
   background-position: center;
   background-size: 720px 480px;
   background-repeat: no-repeat;
-  width: 720px;
-  height: 480px;
-  box-shadow:  var(--canvas-box-shadow);
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
   border-radius: var(--canvas-border-radius);
+  box-shadow:  var(--canvas-box-shadow);
 }
 
 .game-btn {
@@ -165,8 +175,8 @@ h1 {
   background-position: center;
   background-size: 720px 480px;
   background-repeat: no-repeat;
-  width: 720px;
-  height: 480px;
+  width: 100%;
+  height: 100%;
   box-shadow:  var(--canvas-box-shadow);
   border-radius: var(--canvas-border-radius);
 }
